--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,8 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<span class="notice"><%= notice %></span>
+<span class="alert"><% = alert %></span>
 <%= render '/layouts/nav' %>
 <div class="container">
     <% yield %>
